<resources>
    <string name="app_name">SmartHealth</string>
    <string name="title">中山大学智慧健康服务平台</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search">搜索</string>
    <string name="img">图片</string>
    <string name="vid">视频</string>
    <string name="qa">问答</string>
    <string name="info">资讯</string>
    <string name="empty_msg">搜索内容不能为空</string>
    <string name="confirm_msg">对话框“确定”按钮被点击</string>
    <string name="cancel_msg">对话框“取消”按钮被点击</string>
    <string name="succeed_msg">搜索成功</string>
    <string name="fail_msg">搜索失败</string>
    <string name="search_target">Health</string>
    <string name="dialog_title">提示</string>
    <string name="positive_btn_text">确认</string>
    <string name="negative_btn_text">取消</string>
    <string name="was_chosen">被选中</string>
    <string name="sysu">The logo of SYSU</string>
</resources>
